Fix padding in footer on mobile devices and set contact input 100% width on mobile

--- a/client/src/assets/styles/components/_inputs.scss
+++ b/client/src/assets/styles/components/_inputs.scss
@@ -7,6 +7,9 @@
   overflow: hidden;
   border-left: 0;
   transition: .2s border-left;
+  @media (max-width: 468px) {
+    width: 100%;
+  }
   &:focus {
     outline: none;
     border-left: 4px solid var(--color-primary);
@@ -36,6 +39,9 @@
     width: 100%;
     padding: 0;
     border: 0;
+    @media (max-width: 468px) {
+      flex-direction: column;
+    }
   }
   &__message {
     width: 100%;
